--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-# History files
+.Rproj.user
 .Rhistory
-
-# Example code in package build process
-*-Ex.R
-
-# R data files from past sessions
-.Rdata
-
-# RStudio files
-.Rproj.user/
+.RData
+UBL.Rcheck
+doc/packageVignette/cache
+doc/packageVignette/auto
+.gitignore
+*~
+*#
+.#*
