--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Description: Provides a set of functions that can be used to obtain better predi
 Version: 0.0.1
 Depends: R(>= 3.0), methods
 Date: 2014-12-02
-Authors@R: c(person("Paula", "Branco", email = "paobranco@gmail.com", role = c("aut", "cre")), person("Rita", "Ribeiro", email = "rpribeiro@dcc.fc.up.pt", role = c("aut", "cre")), person("Luis", "Torgo", email = "ltorgo@dcc.fc.up.pt", role = c("aut", "cre")))
-Maintainer: Paula Branco <paobranco@gmail.com>
+Authors@R: c(person("Paula", "Branco", email = "paobranco@gmail.com", role = c("aut", "cre")), person("Rita", "Ribeiro", email = "rpribeiro@dcc.fc.up.pt", role = "aut"), person("Luis", "Torgo", email = "ltorgo@dcc.fc.up.pt", role = "aut"))
 URL: https://github.com/ltorgo/UBL
 BugReports: https://github.com/ltorgo/UBL/issues
 License: GPL (>=2)
