--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Version: 0.0.2
 Depends: R(>= 3.0), methods
 Date: 2014-12-02
 Authors@R: c(person("Paula", "Branco", email = "paobranco@gmail.com", role = c("aut", "cre")), person("Rita", "Ribeiro", email = "rpribeiro@dcc.fc.up.pt", role = "aut"), person("Luis", "Torgo", email = "ltorgo@dcc.fc.up.pt", role = "aut"))
-URL: https://github.com/ltorgo/UBL
-BugReports: https://github.com/ltorgo/UBL/issues
+URL: https://github.com/paobranco/UBL
+BugReports: https://github.com/paobranco/UBL/issues
 License: GPL (>=2)
 LazyLoad: yes
 LazyData: yes
