--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: UBL
 Type: Package
-Title: Implementation of Several Approaches to Utility-based Learning for both Classification and Regression Tasks
+Title: An Implementation of Several Approaches to Utility-based Learning for both Classification and Regression Tasks
 Description: Provides a set of functions that can be used to obtain better predictive performance on cost-sensitive tasks (both regression and classification). This includes resampling approaches, cost-based methods, special purpose evaluation metrics as well as specific learning systems.
 Version: 0.0.3
 Depends: R(>= 3.0), methods
-Date: 2016-01-14
+Imports: uba
+Remotes: rpribeiro/UBA
+Suggests: MASS, rpart, testthat, DMwR
+Date: 2016-03-11
 Authors@R: c(person("Paula", "Branco", email = "paobranco@gmail.com", role = c("aut", "cre")), person("Rita", "Ribeiro", email = "rpribeiro@dcc.fc.up.pt", role = "aut"), person("Luis", "Torgo", email = "ltorgo@dcc.fc.up.pt", role = "aut"))
 URL: https://github.com/paobranco/UBL
 BugReports: https://github.com/paobranco/UBL/issues
