--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: UBL
 Type: Package
-Title: An Implementation of Several Approaches to Utility-Based Learning for Both Classification and Regression Tasks
-Description: Provides a set of functions that can be used to obtain better predictive performance on cost-sensitive and cost/benefits tasks (for both regression and classification). This includes re-sampling approaches, cost-based methods, special purpose evaluation metrics as well as specific learning systems.
-Version: 0.0.4
+Title: An Implementation of Re-Sampling Approaches to Utility-Based Learning for Both Classification and Regression Tasks
+Description: Provides a set of functions that can be used to obtain better predictive performance on cost-sensitive and cost/benefits tasks (for both regression and classification). This includes re-sampling approaches that modify the original data set biasing it towards the user preferences.
+Version: 0.0.5
 Depends: R(>= 3.0), methods, grDevices, stats
-Suggests: MASS, rpart, testthat, DMwR
-Date: 2016-04-28
+Suggests: MASS, rpart, testthat, DMwR, ggplot2
+Date: 2016-07-13
 Authors@R: c(person("Paula", "Branco", email = "paobranco@gmail.com", role = c("aut", "cre")), person("Rita", "Ribeiro", email = "rpribeiro@dcc.fc.up.pt", role = c("aut", "ctb")), person("Luis", "Torgo", email = "ltorgo@dcc.fc.up.pt", role = c("aut", "ctb")))
 URL: https://github.com/paobranco/UBL
 BugReports: https://github.com/paobranco/UBL/issues
 License: GPL (>=2)
 LazyLoad: yes
 LazyData: yes
-
